--- a/img/style.css
+++ b/img/style.css
@@ -3,7 +3,7 @@
   --gold: #bdae82;
   --white: #fff;
   --main-font: Merriweather, Arial, sans-serif;
-  --second-font: Inter, Arial, sans-serif;
+  --second-font: Inter, Verdana, Arial, sans;
 }
 
 .section {
@@ -39,7 +39,7 @@ a {
 }
 
 header {
-  background-image: url("./img/bg.png");
+  background-image: url("./bg.png");
   width: 1440px;
   height: 910px;
 }
@@ -48,10 +48,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-}
-
-.logo {
-  margin-top: 20px;
 }
 
 nav {
@@ -200,7 +196,7 @@ nav {
   width: 220px;
   height: 55px;
   font-size: 20px;
-  border: 2px solid var(--gold);
+  border: 2px solid #bdae82;
   font-family: var(--second-font);
   background-color: var(--bg-dark);
   color: var(--gold);
@@ -250,7 +246,7 @@ nav {
 }
 
 .video-player {
-  background-image: url(./img/video-player.png);
+  background-image: url(./video-player.png);
   width: 1400px;
   height: 705px;
   display: flex;
@@ -286,191 +282,4 @@ nav {
   background-color: var(--gold);
   margin-left: 15px;
   margin-bottom: 10px;
-}
-
-.price-items {
-  width: 1400px;
-  height: 505px;
-  top: 240px;
-  left: 20px;
-  border: 1px;
-  gap: 25px;
-  display: flex;
-  flex-direction: row;
-}
-
-.price-item {
-  width: 450px;
-  height: 505px;
-  top: 240px;
-  left: 20px;
-  border: 3px solid var(--gold);
-  text-align: center;
-}
-
-.tariff {
-  font-family: var(--main-font);
-  color: var(--white);
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 56px;
-  margin-top: 43px;
-  margin-bottom: 20px;
-}
-
-.money {
-  font-family: var(--main-font);
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 48px;
-  margin-bottom: 20px;
-}
-
-.price-text {
-  font-family: var(--second-font);
-  color: var(--white);
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 36px;
-}
-
-.order {
-  font-family: var(--second-font);
-  width: 219px;
-  height: 55px;
-  top: 407px;
-  left: 115px;
-  font-size: 20px;
-  margin-top: 40px;
-  margin-bottom: 43px;
-  color: var(--bg-dark);
-  background-color: var(--gold);
-}
-
-.order:hover {
-  color: var(--white);
-}
-
-.contacts {
-  background-image: url(./img/photo111.png);
-  width: 1440px;
-  height: 700px;
-  margin-top: 100px;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.contacts-container {
-  width: 450px;
-  height: 445px;
-  margin-top: 60px;
-  margin-left: 970px;
-  margin-right: 20px;
-}
-
-.contacts-title {
-  font-family: var(--main-font);
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 80px;
-  letter-spacing: 0em;
-  text-align: left;
-  margin-top: 60px;
-  margin-bottom: 40px;
-  color: var(--gold);
-}
-
-.text-contact {
-  font-family: var(--second-font);
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 40px;
-  letter-spacing: 0em;
-  margin-top: 5px;
-  margin-left: 20px;
-}
-
-.mail {
-  width: 450px;
-  height: 50px;
-  border: 2px solid var(--gold);
-}
-
-.phone {
-  width: 450px;
-  height: 50px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: 2px solid var(--gold);
-}
-
-.message {
-  width: 450px;
-  height: 100px;
-  margin-bottom: 30px;
-  border: 2px solid var(--gold);
-}
-
-.btn-message {
-  font-family: var(--second-font);
-  width: 219px;
-  height: 55px;
-  top: 407px;
-  left: 115px;
-  font-size: 20px;
-  margin-top: 40px;
-  margin-bottom: 43px;
-  color: var(--bg-dark);
-  background-color: var(--gold);
-}
-
-.btn-message:hover {
-  color: var(--white);
-}
-
-.footer {
-  width: 1440px;
-  height: 150px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.footer-data {
-  width: 182px;
-  height: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.school {
-  width: 211px;
-  height: 50px;
-}
-
-.text-school {
-  font-family: var(--second-font);
-  font-size: 20px;
-  font-weight: 400;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.social-list {
-  width: 188px;
-  height: 50px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  gap: 20px;
-  margin-top: 50px;
-  margin-bottom: 50px;
-}
-
-.img-footer {
-  width: 32px;
-  height: 32px;
 }
